--- a/style/style.css
+++ b/style/style.css
@@ -1,13 +1,13 @@
 /*
 Error: Undefined mixin 'box-sizing'.
-        on line 211 of D:/WORK/www/sonny/style/reset.scss, in `box-sizing'
-        from line 211 of D:/WORK/www/sonny/style/reset.scss
-        from line 1 of D:\WORK\www\sonny\style\style.scss
+        on line 212 of D:/GIT/wp-skillet/style/reset.scss, in `box-sizing'
+        from line 212 of D:/GIT/wp-skillet/style/reset.scss
+        from line 1 of D:\GIT\wp-skillet\style\style.scss
 
 Backtrace:
-D:/WORK/www/sonny/style/reset.scss:211:in `box-sizing'
-D:/WORK/www/sonny/style/reset.scss:211
-D:\WORK\www\sonny\style\style.scss:1
+D:/GIT/wp-skillet/style/reset.scss:212:in `box-sizing'
+D:/GIT/wp-skillet/style/reset.scss:212
+D:\GIT\wp-skillet\style\style.scss:1
 C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:348:in `block in visit_mixin'
 C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/stack.rb:98:in `block in with_mixin'
 C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/stack.rb:115:in `with_frame'
@@ -74,4 +74,4 @@ C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.13/vendor/listen/lib/listen/adap
 body:before {
   white-space: pre;
   font-family: monospace;
-  content: "Error: Undefined mixin 'box-sizing'.\A         on line 211 of D:/WORK/www/sonny/style/reset.scss, in `box-sizing'\A         from line 211 of D:/WORK/www/sonny/style/reset.scss\A         from line 1 of D:\WORK\www\sonny\style\style.scss"; }
+  content: "Error: Undefined mixin 'box-sizing'.\A         on line 212 of D:/GIT/wp-skillet/style/reset.scss, in `box-sizing'\A         from line 212 of D:/GIT/wp-skillet/style/reset.scss\A         from line 1 of D:\GIT\wp-skillet\style\style.scss"; }
