--- a/style/style.scss
+++ b/style/style.scss
@@ -52,6 +52,10 @@ header {
   }
 }
 
+h1, h2, h3, h4, h5, h6 {
+  font-weight: 400;
+}
+
 .content {
   float: left;
   width: 100%;
@@ -59,6 +63,20 @@ header {
     padding-bottom: 20px;
     line-height: 20px;
   }
+}
+
+input[type="text"], input[type="email"], input[type="tel"], input[type="search"], input[type="password"], textarea {
+  height: 30px;
+  width: 100%;
+  border: 1px solid #ccc;
+  background: #eee;
+  padding: 0 10px;
+}
+
+textarea {
+  resize: none;
+  height: 100px;
+  padding: 10px;
 }
 
 .button {
