--- a/style/style.scss
+++ b/style/style.scss
@@ -88,6 +88,7 @@ textarea {
   padding: 0 20px;
   background: $color2;
   color: #fff;
+  font-family: $font;
   &:hover {
     opacity: 0.8;
     text-decoration: none;
