--- a/style/reset.scss
+++ b/style/reset.scss
@@ -469,6 +469,13 @@ $button-color: #fff; // The color of button
   background: #222;
   height: 50px;
   display: none;
+  p {
+    margin-left: 3%;
+    color: #fff;
+    font-size: 24px;
+    text-transform: uppercase;
+    line-height: 50px;
+  }
   span {
     @include center(false, true);
     right: 3%;
