--- a/style/reset.scss
+++ b/style/reset.scss
@@ -238,24 +238,8 @@ hr {
   height: 0
 }
 
-body, html {
-  height: 100%;
-}
-
-main {
-  min-height: 100%;
-}
-
-* html main {
-  height: 100%;
-}
-
-.pusher {
-  clear: both;
-}
-
-article, aside, details, figcaption, figure, footer, header, nav, section, summary {
-  display: block
+article, aside, details, figcaption, figure, footer, header, nav, section, summary, main {
+  display: block;
 }
 
 .alignleft {
