--- a/style/style.scss
+++ b/style/style.scss
@@ -24,6 +24,11 @@ body {
   position: relative;
 }
 
+.flex {
+  @include flexbox;
+  @include justify-content(space-between);
+}
+
 h1, h2, h3, h4, h5, h6 {
   font-weight: 400;
 }
