--- a/style/_reset.scss
+++ b/style/_reset.scss
@@ -1,28 +1,11 @@
+$w: 1140px;
+$c: #333333;
+$bg: #0C59AF;
+$f: Arial;
+$inputH: 40px;
+$font-base: 14px;
+
 //MIXINS
-@mixin border-radius($radius) {
-  -webkit-border-radius: $radius;
-  -khtml-border-radius: $radius;
-  -moz-border-radius: $radius;
-  -ms-border-radius: $radius;
-  border-radius: $radius;
-}
-
-@mixin background-size($size) {
-  -webkit-background-size: $size;
-  -moz-background-size: $size;
-  -ms-background-size: $size;
-  -o-background-size: $size;
-  background-size: $size;
-}
-
-@mixin box-shadow($styles) {
-  -webkit-box-shadow: $styles;
-  -moz-box-shadow: $styles;
-  -ms-box-shadow: $styles;
-  -o-box-shadow: $styles;
-  box-shadow: $styles;
-}
-
 @mixin transition($property: all, $duration: .4s, $easing: ease) {
   -webkit-transition: $property $duration $easing;
   -moz-transition: $property $duration $easing;
@@ -122,15 +105,10 @@
   animation-fill-mode: forwards; /* this prevents the animation from restarting! */
 }
 
-// responsive fonts + line-heights + padding & margin !!!
-$font-base: 14px;
-/// Strips the unit from a number.
 @function strip-units($value) {
   @return ($value / ($value * 0 + 1));
 }
-// Convert pixels to rems
-// eg. for a relational value of 12px write rem(12)
-// Assumes $font-base is the font-size of <html>
+
 @function rem($pxval) {
   @if not unitless($pxval) {
     $pxval: strip-units($pxval);
@@ -169,11 +147,6 @@ $font-base: 14px;
 @media screen and (-webkit-min-device-pixel-ratio: 0) {
   /* Using @include svg-font-face('FontName', 'font-filename', 400); */
 }
-
-$w: 1140px;
-$c: #333333;
-$bg: #0C59AF;
-$f: Arial;
 
 //RESET
 * {
@@ -230,7 +203,7 @@ td {
   vertical-align: middle;
 }
 
-input, select, textarea {
+input[type="text"], input[type="email"], input[type="tel"], input[type="search"], select, textarea {
   @include transition(all, 0.4s);
   border-radius: 0;
   -webkit-appearance: none;
@@ -328,8 +301,8 @@ img {
   position: relative;
   display: block;
   width: 100%;
-  font: 400 14px/40px $f;
-  height: 40px;
+  font: 400 14px/$inputH $f;
+  height: $inputH;
   select {
     width: 100%;
     height: 100%;
@@ -388,8 +361,8 @@ div.wpcf7 {
     right: 0;
     cursor: pointer;
     font-family: $f;
-    height: 30px;
-    line-height: 30px;
+    height: $inputH;
+    line-height: $inputH;
     padding: 0 10px;
   }
   .wpcf7-response-output {
@@ -417,14 +390,14 @@ div.wpcf7 {
       padding-bottom: 40px;
       font-weight: 400;
       span {
-        font-size: 100px;
+        font-size: rem(100);
         line-height: 1.2;
         color: $bg;
         font-weight: 700;
       }
     }
     p {
-      font-size: 25px;
+      font-size: rem(20);
     }
   }
 }
