--- a/style/_reset.scss
+++ b/style/_reset.scss
@@ -6,6 +6,14 @@ $inputH: 40px;
 $font-base: 14px;
 
 //MIXINS
+@mixin box-shadow($styles) {
+  -webkit-box-shadow: $styles;
+  -moz-box-shadow: $styles;
+  -ms-box-shadow: $styles;
+  -o-box-shadow: $styles;
+  box-shadow: $styles;
+}
+
 @mixin transition($property: all, $duration: .4s, $easing: ease) {
   -webkit-transition: $property $duration $easing;
   -moz-transition: $property $duration $easing;
