--- a/style/_reset.scss
+++ b/style/_reset.scss
@@ -1,7 +1,7 @@
 $w: 1140px;
 $c: #333333;
 $bg: #0C59AF;
-$f: Arial;
+$f: "open";
 $inputH: 40px;
 $font-base: 14px;
 
@@ -292,15 +292,13 @@ img {
   padding-bottom: 56.5%;
   position: relative;
   z-index: 0;
-  > {
-    iframe, object, embed {
-      height: 100%;
-      left: 0;
-      position: absolute;
-      top: 0;
-      width: 100%;
-      z-index: -1
-    }
+  iframe, object, embed {
+    height: 100%;
+    left: 0;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    z-index: -1
   }
 }
 
@@ -372,13 +370,14 @@ div.wpcf7 {
     height: $inputH;
     line-height: $inputH;
     padding: 0 10px;
+    text-align: left;
   }
   .wpcf7-response-output {
-    float: left;
     width: 100%;
+    background: #fff;
     margin: 10px 0 0 0;
     font-family: $f;
-    font-size: 14px;
+    font-size: 12px;
     line-height: 20px;
     padding: 5px 20px;
     text-align: center;
@@ -393,19 +392,19 @@ div.wpcf7 {
   .content {
     text-align: center;
     h1 {
-      font-size: 75px;
+      font-size: rem(60);
       line-height: 1.2;
       padding-bottom: 40px;
       font-weight: 400;
       span {
-        font-size: rem(100);
+        font-size: rem(85);
         line-height: 1.2;
         color: $bg;
         font-weight: 700;
       }
     }
     p {
-      font-size: rem(20);
+      font-size: rem(18);
     }
   }
 }
