--- a/style/components/reset.scss
+++ b/style/components/reset.scss
@@ -1,161 +1,3 @@
-$w: 1140px;
-$c: #333333;
-$bg: #0C59AF;
-$f: "open";
-$inputH: 40px;
-$font-base: 14px;
-
-//MIXINS
-@mixin box-shadow($styles) {
-  -webkit-box-shadow: $styles;
-  -moz-box-shadow: $styles;
-  -ms-box-shadow: $styles;
-  -o-box-shadow: $styles;
-  box-shadow: $styles;
-}
-
-@mixin transition($property: all, $duration: .4s, $easing: ease) {
-  -webkit-transition: $property $duration $easing;
-  -moz-transition: $property $duration $easing;
-  -ms-transition: $property $duration $easing;
-  -o-transition: $property $duration $easing;
-  transition: $property $duration $easing;
-}
-
-@mixin transform($action, $backface: false) {
-  @if $backface {
-    -webkit-transform: $action;
-    -moz-transform: $action;
-    -ms-transform: $action;
-    -o-transform: $action;
-    transform: $action;
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
-  } @else {
-    -webkit-transform: $action;
-    -moz-transform: $action;
-    -ms-transform: $action;
-    -o-transform: $action;
-    transform: $action;
-  }
-}
-
-@mixin user-select($select) {
-  -webkit-touch-callout: $select;
-  -webkit-user-select: $select;
-  -khtml-user-select: $select;
-  -moz-user-select: $select;
-  -ms-user-select: $select;
-  user-select: $select;
-}
-
-@mixin backface-visibility($back: hidden) {
-  -webkit-backface-visibility: $back;
-  -moz-backface-visibility: $back;
-  backface-visibility: $back;
-}
-
-@mixin center($horizontal: true, $vertical: true) {
-  position: absolute;
-  @if ($horizontal and $vertical) {
-    top: 50%;
-    left: 50%;
-    -webkit-transform: translate(-50%, -50%);
-    -moz-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-  } @else if ($horizontal) {
-    left: 50%;
-    -webkit-transform: translate(-50%, 0);
-    transform: translate(-50%, 0);
-    transform: translate(-50%, 0);
-  } @else if ($vertical) {
-    top: 50%;
-    -webkit-transform: translate(0, -50%);
-    -moztransform: translate(0, -50%);
-    transform: translate(0, -50%);
-  }
-}
-
-@mixin keyframes($name) {
-  @-webkit-keyframes #{$name} {
-    @content;
-  }
-  @-moz-keyframes #{$name} {
-    @content;
-  }
-  @-ms-keyframes #{$name} {
-    @content;
-  }
-  @keyframes #{$name} {
-    @content;
-  }
-}
-
-@mixin animation($delay, $duration, $animation) {
-  -webkit-animation-delay: $delay;
-  -webkit-animation-duration: $duration;
-  -webkit-animation-name: $animation;
-  -webkit-animation-fill-mode: forwards; /* this prevents the animation from restarting! */
-
-  -moz-animation-delay: $delay;
-  -moz-animation-duration: $duration;
-  -moz-animation-name: $animation;
-  -moz-animation-fill-mode: forwards; /* this prevents the animation from restarting! */
-
-  -o-animation-delay: $delay;
-  -o-animation-duration: $duration;
-  -o-animation-name: $animation;
-  -o-animation-fill-mode: forwards; /* this prevents the animation from restarting! */
-
-  animation-delay: $delay;
-  animation-duration: $duration;
-  animation-name: $animation;
-  animation-fill-mode: forwards; /* this prevents the animation from restarting! */
-}
-
-@function strip-units($value) {
-  @return ($value / ($value * 0 + 1));
-}
-
-@function rem($pxval) {
-  @if not unitless($pxval) {
-    $pxval: strip-units($pxval);
-  }
-  $base: $font-base;
-  @if not unitless($base) {
-    $base: strip-units($base);
-  }
-  @return ($pxval / $base) * 1rem;
-}
-
-@mixin declare-font-face($font-family, $font-filename, $font-weight: normal, $font-style: normal) {
-  @font-face {
-    font-family: '#{$font-family}';
-    src: url('../fonts/#{$font-filename}.eot');
-    src: url('../fonts/#{$font-filename}.eot?#iefix') format('embedded-opentype'),
-    url('../fonts/#{$font-filename}.woff') format('woff'),
-    url('../fonts/#{$font-filename}.ttf') format('truetype'),
-    url('../fonts/#{$font-filename}.svg##{$font-family}') format('svg');
-    font-weight: $font-weight;
-    font-style: $font-style
-  }
-}
-
-@mixin svg-font-face($font-family, $font-filename, $font-weight: normal, $font-style: normal) {
-  @font-face {
-    font-family: '#{$font-family}';
-    src: url('../fonts/#{$font-filename}.svg##{$font-family}') format('svg');
-    font-weight: $font-weight;
-    font-style: $font-style
-  }
-}
-
-/* Using @include declare-font-face('FontName', 'font-filename', 400); */
-
-@media screen and (-webkit-min-device-pixel-ratio: 0) {
-  /* Using @include svg-font-face('FontName', 'font-filename', 400); */
-}
-
 //RESET
 * {
   margin: 0;
@@ -212,12 +54,13 @@ td {
 }
 
 input[type="text"], input[type="email"], input[type="tel"], input[type="search"], select, textarea {
-  @include transition(all, 0.4s);
+  @include transition();
   border-radius: 0;
   -webkit-appearance: none;
 }
 
-input[type="submit"], input[type="button"], button {
+input[type="submit"], input[type="button"], button, .button {
+  @include transition();
   -webkit-appearance: none;
   cursor: pointer;
   border: none;
@@ -307,7 +150,8 @@ img {
   position: relative;
   display: block;
   width: 100%;
-  font: 400 14px/$inputH $f;
+  font-size: 14px;
+  font-family: $f;
   height: $inputH;
   select {
     width: 100%;
@@ -329,6 +173,7 @@ img {
       padding: 0 10px;
       border-radius: 5px;
       border: 1px solid #eee;
+      line-height: $inputH;
       &:after {
         content: '';
         width: 0;
@@ -416,7 +261,6 @@ $line-position: 18px;
 // The spacing between lines, also need to improve -> &:after {top: ?px} !
 $button-color: #fff;
 // The color of button
-
 #menuOpen {
   position: fixed;
   top: 0;
@@ -481,5 +325,49 @@ $button-color: #fff;
   }
 }
 
+html {
+  font: 400 #{$font-base}/1.5714 $f, sans-serif;
+}
 
+body {
+  color: $c;
+  @include flex-direction(column);
+  @include flexbox();
+  min-height: 100vh;
+}
 
+#main {
+  overflow: hidden;
+  @include flex(1, 0, auto);
+  width: 100%;
+}
+
+.container {
+  margin: 0 auto;
+  width: $w;
+  max-width: 94%;
+  position: relative;
+}
+
+.flex {
+  @include flexbox;
+  @include justify-content(space-between);
+}
+
+.alc {
+  @include flexbox;
+  @include justify-content(space-between);
+  @include align-items(center);
+}
+
+.end {
+  @include flexbox;
+  @include justify-content(space-between);
+  @include align-items(flex-end);
+}
+
+.cover {
+  background-size: cover;
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
+}
