--- a/style/components/code.scss
+++ b/style/components/code.scss
@@ -29,12 +29,55 @@ header {
       li {
         display: inline-block;
         vertical-align: top;
+        position: relative;
         a {
           font-size: 14px;
           display: block;
         }
         &:hover a, &.current-menu-item a {
 
+        }
+        &:hover > ul {
+          margin-top: 0;
+          opacity: 1;
+          visibility: visible;
+        }
+        ul {
+          margin-top: 20px;
+          opacity: 0;
+          visibility: hidden;
+          width: 270px;
+          position: absolute;
+          left: 0;
+          top: 100%;
+          background: rgba(239, 239, 239, 0.8);
+          font-size: 14px;
+          @include transition();
+          li {
+            position: relative;
+            a {
+              display: block;
+              padding: 7px 18px;
+              color: $bg;
+              font-size: rem(13);
+              text-decoration: none;
+            }
+            &:hover, &.current-menu-item {
+              > a {
+                color: #fff;
+                background: $bg;
+              }
+            }
+            &:hover ul {
+              visibility: visible;
+              opacity: 1;
+              margin-top: 0;
+            }
+            ul {
+              left: 270px;
+              top: 0;
+            }
+          }
         }
       }
     }
