--- a/style/components/reset.scss
+++ b/style/components/reset.scss
@@ -19,7 +19,12 @@ a, a:hover, input, textarea, select {
   outline: 0 none
 }
 
-ol, ul {
+ol {
+  list-style: decimal inside;
+  margin-bottom: 20px;
+}
+
+ul {
   list-style: none;
 }
 
@@ -77,10 +82,8 @@ input::-moz-placeholder, textarea::-moz-placeholder {
 
 hr {
   clear: both;
-  font-size: 0;
   overflow: hidden;
   display: block;
-  height: 0
 }
 
 article, aside, details, figcaption, figure, footer, header, nav, section, summary, main {
@@ -104,8 +107,7 @@ img.alignright {
 }
 
 .aligncenter {
-  margin-left: auto;
-  margin-right: auto
+  margin: 0 auto 20px;
 }
 
 img {
@@ -237,12 +239,12 @@ div.wpcf7 {
   .content {
     text-align: center;
     h1 {
-      font-size: rem(60);
+      font-size: rem(55);
       line-height: 1.2;
       padding-bottom: 40px;
       font-weight: 400;
       span {
-        font-size: rem(85);
+        font-size: rem(80);
         line-height: 1.2;
         color: $bg;
         font-weight: 700;
