--- a/style/components/code.scss
+++ b/style/components/code.scss
@@ -3,6 +3,23 @@ h1, h2, h3, h4, h5, h6 {
   padding-bottom: 20px;
   line-height: 1.2;
 }
+
+h1 {
+
+}
+
+h2 {
+
+}
+
+h3 {
+
+}
+
+h4 {
+
+}
+
 p {
   padding-bottom: 20px;
   line-height: 1.5;
@@ -35,7 +52,7 @@ header {
           display: block;
         }
         &:hover > a, &.current-menu-item > a {
-
+          text-decoration: none;
         }
         &:hover > ul {
           margin-top: 0;
@@ -97,7 +114,7 @@ header {
         height: 4px;
         border-radius: 50%;
         position: absolute;
-        top: 15px;
+        top: rem(15);
         left: 0;
       }
     }
@@ -109,7 +126,7 @@ input[type="text"], input[type="email"], input[type="tel"], input[type="search"]
   width: 100%;
   border: 1px solid #ccc;
   background: #eee;
-  padding: 0 10px;
+  padding: 0 rem(20);
   font-family: $f;
   font-size: rem(14);
   &:focus {
@@ -120,7 +137,7 @@ input[type="text"], input[type="email"], input[type="tel"], input[type="search"]
 textarea {
   resize: none;
   height: 100px;
-  padding: 10px;
+  padding: 12px rem(20);
 }
 
 .button {
