--- a/style/style.scss
+++ b/style/style.scss
@@ -3,6 +3,7 @@
 $w: 1140px;
 $c: #333333;
 $bg: #0C59AF;
+$bg2: lighten(#0C59AF, 20%);
 $inputH: 40px;
 $font-base: 14px;
 $f: "open";
@@ -11,4 +12,5 @@ $icons: "icons";
 @import 'components/flexbox';
 @import 'components/reset';
 @import 'components/code';
+//@import 'components/woo';
 @import 'components/rwd';
