--- a/style/components/code.scss
+++ b/style/components/code.scss
@@ -140,7 +140,7 @@ textarea {
   padding: 12px rem(20);
 }
 
-.button {
+.button, .submit {
   display: inline-block;
   line-height: rem(40);
   padding: 0 rem(20);
@@ -150,8 +150,9 @@ textarea {
   font-family: $f;
   text-align: center;
   text-decoration: none;
+  cursor: pointer;
   &:hover {
-    opacity: 0.8;
+    background: $bg2;
     text-decoration: none;
   }
 }
