--- a/style/components/code.scss
+++ b/style/components/code.scss
@@ -67,7 +67,7 @@ header {
           position: absolute;
           left: 0;
           top: 100%;
-          background: rgba(239, 239, 239, 0.8);
+          background: $bg;
           font-size: 14px;
           @include transition();
           li {
@@ -75,14 +75,14 @@ header {
             a {
               display: block;
               padding: 7px 18px;
-              color: $bg;
+              color: #fff;
               font-size: rem(13);
               text-decoration: none;
             }
             &:hover, &.current-menu-item {
               > a {
-                color: #fff;
-                background: $bg;
+                color: $bg;
+                background: #fff;
               }
             }
             &:hover ul {
@@ -118,42 +118,6 @@ header {
         left: 0;
       }
     }
-  }
-}
-
-input[type="text"], input[type="email"], input[type="tel"], input[type="search"], input[type="password"], textarea {
-  height: $inputH;
-  width: 100%;
-  border: 1px solid #ccc;
-  background: #eee;
-  padding: 0 rem(20);
-  font-family: $f;
-  font-size: rem(14);
-  &:focus {
-
-  }
-}
-
-textarea {
-  resize: none;
-  height: 100px;
-  padding: 12px rem(20);
-}
-
-.button, .submit {
-  display: inline-block;
-  line-height: rem(40);
-  padding: 0 rem(20);
-  font-size: rem(14);
-  background: $bg;
-  color: #fff;
-  font-family: $f;
-  text-align: center;
-  text-decoration: none;
-  cursor: pointer;
-  &:hover {
-    background: $bg2;
-    text-decoration: none;
   }
 }
 
