--- a/style/components/rwd.scss
+++ b/style/components/rwd.scss
@@ -20,7 +20,7 @@
     background: rgba(26, 26, 26, 0.95);
     right: 0;
     bottom: 0;
-    overflow: auto;
+    z-index: 100;
     ul {
       li {
         display: inline-block;
