--- a/style/style.scss
+++ b/style/style.scss
@@ -6,8 +6,7 @@ $bg: #0C59AF;
 $bg2: lighten(#0C59AF, 20%);
 $inputH: 40px;
 $font-base: 14px;
-$f: "open";
-$icons: "icons";
+$f: "Open Sans";
 
 @import 'components/flexbox';
 @import 'components/reset';
